Fixed contact button visibility

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ body, h1, p, ul {
 .navbar ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 30px;
+    flex-wrap:wrap;
 }
 
 .navbar ul li {
